# fileManager

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  LICENSE  README.md  check_duplicates.py  db_utils.py  duplicates_cleanup.py  duplicates_cleanup.yaml  fileManager_schema.sql  fileManager_test_1.sql  fileManager_test_dump.sql  fileManager_test_dump_with_path.sql  file_database.py  file_database_update.py  file_manager.py  file_manager_implementation.py  file_utils.py  import_config.yaml  import_media.py  import_media_test.py  main.py  project_wing.wpr  pyproject.toml  s3_utils.py  storage_client.py  storage_interface.py  update_database.py  utils.py
.github/workflows/: pre-commit.yml
src/file_manager/: check_duplicates.py  db_utils.py  duplicates_cleanup.py  file_database.py  file_database_update.py  file_manager.py  file_manager_implementation.py  file_utils.py  import_config.py  import_media.py  s3_utils.py  storage_client.py  storage_interface.py  update_database.py  utils.py
test_data/: min_import_config.yaml
test_db/: fileManager_test_dump.sql
tests/: test_db_utils.py  test_duplicates_cleanup.py  test_file_database.py  test_file_database_update.py  test_file_manager.py  test_file_manager_implementation.py  test_file_utils.py  test_import_config.py  test_import_media.py  test_s3_utils.py  test_utils.py
